Configuration to limit blog posts in GET enpoint

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jp.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+blogs.limit=3
